--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        
+    <div class="row">
+        <button id="yes-button">Yes</button>
+        <button id="no-button" onclick="changeText()">No</button>
     </div>
+    <link rel="stylesheet" href="">
+    <script src="app.js"></script>
 </body>
 </html>
